cn/v1.7.0/12.开发者中心/02.workflow-api.md
---
title: 工作流
date: 2021-03-19 09:32:04
permalink: /cn/v1.7.0/api/workflow/
---

## 获取工作流任务状态

#### 注意事项

- 目前仅支持 GitLab 的 commitId 查询
- 支持完整的 commitId 或者输入 commitId 前 8 位查询

#### 请求

```
GET /api/directory/workflowTask?commitId=<commitId>
```

#### Query

|参数名|类型|描述|默认值|是否必须|
|---|---|---|---|---|
|`commitId`|string|commitId|无|must|

#### 正常返回

```json
[
    {
        "task_id": 49,
        "create_time": 1639466317,
        "start_time": 1639466318,
        "end_time": 1639466354,
        "status": "passed",
        "url": "http://my.zadig.com/v1/projects/detail/proxy/pipelines/multi/workflow-demo/49"
    }
]
```

#### 返回说明

|参数名|类型|描述|
|---|---|---|
|`task_id`|int64|任务 id|
|`url`|string|任务具体 url|
|`status`|string|任务状态|
|`create_time`|int64|Unix 时间戳格式的任务创建时间|
|`start_time`|int64|Unix 时间戳格式的任务开始时间|
|`end_time`|int64|Unix 时间戳格式的任务结束时间|

> 任务状态包括：created(创建中)/running(运行中)/passed(通过)/failed(失败)/timeout(超时)/cancelled(取消)

#### 错误码对应列表
```json

{
	"resultCode":401,"errorMsg":"auth failed!",
	"resultCode":400,"errorMsg":"param is illegal!"
}
```

## 工作流任务重试

#### 注意事项

- 需要有工作流任务重试的权限
- 支持对状态是 failed(失败)/timeout(超时)/cancelled(取消) 的工作流任务进行重试

#### 请求

```
POST /api/directory/workflowTask/id/:id/pipelines/:name/restart
```

#### 路径参数说明

|参数名|类型|描述|默认值|是否必须|
|---|---|---|---|---|
|`id`|int|任务 id|无|是|
|`pipelines`|string|工作流名称|无|是|

#### 正常返回

```json
{"message":"success"}
```

#### 异常返回
```json
{
  "code": 6164,
  "description": "获取工作流任务失败",
  "extra": {},
  "message": "重试工作流任务失败",
  "type": "error"
}
```
